--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Books</title>
 </head>
@@ -33,7 +34,7 @@
                         <input id="title_author" placeholder="Author" type="text">
                     </div>
                     <div class="until">
-                        <input id="title_until" placeholder="Until:" type="date">
+                        <input id="datepicker" placeholder="Until:" type="text">
                     </div>
                     <div class="checkbox">
                         <input id="title_checkbox" type="checkbox">
@@ -59,6 +60,7 @@
         </footer>
     </div>
 <script src="js/jquery-3.5.0.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
